coral-component-accordion/src/styles/index.styl
/**
 * Copyright 2019 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

@require '@adobe/spectrum-css/dist/components/accordion/index.css';
@require '@adobe/spectrum-css/dist/components/accordion/multiStops/light.css';
@require '@adobe/spectrum-css/dist/components/accordion/multiStops/lightest.css';
@require '@adobe/spectrum-css/dist/components/accordion/multiStops/dark.css';
@require '@adobe/spectrum-css/dist/components/accordion/multiStops/darkest.css';

// @spectrum support nested accordions
._coral-Accordion-item:not(.is-open) {
  & > ._coral-Accordion-itemContent {
    display: block;
    padding: 0 0 0 16px;
  }

  & > ._coral-Accordion-itemIndicator {
    transform: none;
  }
}

// @spectrum support animation
._coral-Accordion--animated {
  ._coral-Accordion-itemContent {
    overflow: hidden;
    transition: height ease 250ms;
  }
}

